<resources>
    <string name="app_name" translatable="false">ProyectoMeep</string>
    <string name="facebook_app_id" translatable="false">1449971675643582</string>
    <string name="facebook_client_token" translatable="false">736c943081ec725c16d598ec09f69f2e</string>
    <string name="logLblLogin">Inicio de sesíon</string>
    <string name="logTxtUser">Usuario</string>
    <string name="lblTxtNombres">Nombres Completos</string>
    <string name="logTxtClave">Contraseña</string>
    <string name="logTxtContra1">Contraseña</string>
    <string name="logTxtContra2">Contraseña</string>
    <string name="logTxtEmail">Correo electronico</string>
    <string name="logTxtTelefono">Telefóno</string>
    <string name="logTxtClaveConfirm">Confirman Contraseña</string>
    <string name="logChkRecordar">Recordar sesión</string>
    <string name="logChkTerminos">Al firmar aceptas el Equipo de servicio y Política de privacidad</string>
    <string name="logBtnIniciar">Iniciar Sesión</string>
    <string name="logBtnRegistrar">Registrar</string>
    <string name="logLblRecuperar1">Enviar email de restablecimiento de constraseña</string>
    <string name="logLblRegistro">No tienes cuenta?</string>
    <string name="logLblRegistro1">Registrar</string>
    <string name="logLblBienvenida">Hola , ¿Qué tenemos hoy?</string>
    <string name="logLblNotificaciones">NOTIFICACIONES</string>
    <string name="logLblPassword">Aviso de Política de Seguridad</string>
    <string name="lblProyecto" translatable="false">MEEP WORK</string>
    <string name="lblTiContraseña">Restablecimiento de contraseña</string>
    <string name="lblCode">Código de Verificación</string>
    <string name="logTxtCode">Código</string>
    <string name="lblRecup">Recuperación</string>
    <string name="lblVeri">Verificar</string>
    <string name="lblSubTiContraseña">Escribe tu email, a continuación, y te enviaremos un correo electrónico para restablecer la contraseña</string>
    <string name="lblAcercaDe1">ACERCA DE NOSOTROS</string>
    <string name="logTxtDireccion">Direccion</string>
    <string name="logTxtAceptar">Aceptar</string>
    <string name="lblAcercaDe">Como empresa ofrecemos una solución integral para organizar y supervisar todas las actividades empresariales y personales. Con una interfaz intuitiva y fácil de usar, permite a los usuarios crear, asignar y dar seguimiento a tareas individuales, establecer fechas límite y prioridades, así como colaborar en proyectos compartidos en tiempo real. Con características como notificaciones automáticas y sincronización multiplataforma, esta aplicación optimiza la productividad y facilita la coordinación entre equipos, asegurando que los proyectos se completen de manera eficiente y puntual.</string>
    <string name="lblCuenta">Cuenta</string>
    <string name="lblDatos">Base de Información</string>
    <string name="lblNameComplet">Nombres Completos</string>
    <string name="lblUser">Nombre de usuario</string>
    <string name="lblSenha">Contraseña</string>
    <string name="lblEmail">Email</string>
    <string name="lblTelefono">Telefono</string>
    <string name="lblDireccion">Dirección</string>
    <string name="logBtnCancelar">Cancelar</string>
    <string name="logBtnSave">Guardar</string>
    <string name="logLblPro">Tareas Restantes</string>
    <string name="logLblPro2">Tareas Realizadas</string>
    <string name="logLblPro3">Total Tareas</string>
    <string name="lblMyproyect">Mis Proyectos</string>
    <string name="lblGroupOrder">Agrupar por</string>
    <string name="lblProgress">En progreso</string>
    <string name="lblProgress2">En progreso</string>
    <string name="lblProgress3">En progreso</string>
    <string name="lblOpen">Abierto</string>
    <string name="lblOpen2">Abierto</string>
    <string name="lblFecha" translatable="false">02.05.24 09:00-05.05.24 22:00</string>
    <string name="lblFecha2" translatable="false">27.04.24 07:00-11.05.24 23:00</string>
    <string name="lblFecha3" translatable="false">06.05.24 10:00-20.05.24 13:00</string>
    <string name="lblFecha4" translatable="false">20.04.24 12:00-08.05.24 18:00</string>
    <string name="lblFecha5" translatable="false">06.05.24 22:00-30.06.24 07:00</string>
    <string name="lblProyect1" translatable="false">Machine Learnig</string>
    <string name="lblProyect2">Proyecto 2</string>
    <string name="lblProyect3">Proyecto 3</string>
    <string name="lblProyect4">Proyecto 4</string>
    <string name="lblProyect5">Proyecto 5</string>
    <string name="lblArea1" translatable="false">Marketing</string>
    <string name="lblArea2" translatable="false">Desarrollo Web</string>
    <string name="lblArea3" translatable="false">Administración</string>
    <string name="lblArea4" translatable="false">Marketing</string>
    <string name="newproyect">Crear Proyecto</string>
    <string name="lblname">Nombre del Proyecto</string>
    <string name="lblescribirName">Escribir el nombre</string>
    <string name="lblToken">Token del Proyecto</string>
    <string name="lblDescripcion">Descripción</string>
    <string name="lblescribirDes">Escribir texto</string>
    <string name="lblTok1">Token Unico:</string>
    <string name="logBtnGen">Generar Token</string>
    <string name="logbtnCrear">Crear</string>
    <string name="logbtnCrearA">Crear Areas</string>
    <string name="logbtnCreaProyect">Crear Proyecto</string>
    <string name="lblForo">Foro</string>
    <string name="lblusuario1" translatable="false">Michael</string>
    <string name="lblusuario2" translatable="false">Lulita</string>
    <string name="lblusuario3" translatable="false">Facundo</string>
    <string name="lblpost">Trabajemos el proyecto</string>
    <string name="lblpost2" translatable="false">Ya esta listo verifiquen!!</string>
    <string name="lblpost3" translatable="false">Necesito ayuda, URGENTE</string>
    <string name="lblcpost">posteado por Michael ahora</string>
    <string name="lblcpost2">posteado por Lulita hace 1h</string>
    <string name="lblcpost3">posteado por Facundo ayer</string>
    <string name="lblcomment" translatable="false">Hola amigos! No se preocupen mañana empezaremos con el proyecto </string>
    <string name="lblnumber" translatable="false">2</string>
    <string name="lblnumber2" translatable="false">0</string>
    <string name="lblnumber3" translatable="false">5</string>
    <string name="lblnumber4" translatable="false">1</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="item1">Cuenta</string>
    <string name="item2">Mensajes</string>
    <string name="item3">Configuración</string>
    <string name="item4">Acerca de</string>
    <string name="item5">Cerrar Sesión</string>
    <string name="item6">Fondo</string>
    <string name="Tarea">Tarea</string>
    <string name="logLblRestablecer">no se acuerda la contraseña?</string>
    <string name="logLblRestablecer1">Recuperar contraseña</string>
    <string name="frgCfgNotificaciones">Notificaciones</string>
    <string name="frgCfgPreferencias">Preferencias</string>
    <string name="frgCfgSonido">Sonido</string>
    <string name="lblConfig">Configuración</string>
    <string name="frgCfgGuardar">Guardar</string>
    <string name="frgCfgCerrarSesion">Cerrar Sesion</string>
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="lblPublicacion">Publicación</string>
    <string name="lblTareas">Tareas</string>
    <string name="lblMiembros">Miembros</string>
    <string name="lblAllproyectos">Todos</string>
    <string name="lblMisfav">Mis Favoritos</string>
    <string name="lblCrear">Crear Publicación</string>
    <string name="lblnamee">Torbe</string>
    <string name="logBtnPubli">Publicar</string>
    <string name="lblCabezal" translatable="false">BETO</string>
    <string name="lblchat" translatable="false">Aa</string>
    <string name="lblConv1" translatable="false">a que hora vas a avanzar?</string>
    <string name="lblConv2" translatable="false">Ahora no mi rei, ando en mi reu con el gremio</string>
    <string name="lblCon1" translatable="false">BETO</string>
    <string name="lblCon1.1" translatable="false">Beto: no fastidies</string>
    <string name="lblCon2" translatable="false">DJ dilan</string>
    <string name="lblCon2.2" translatable="false">DJ dilan: vamos de fiesta</string>
    <string name="lblCon3" translatable="false">Lulita</string>
    <string name="lblCon3.3" translatable="false">Lulita: Ay mi cholito</string>
    <string name="lblCon4" translatable="false">Angela</string>
    <string name="lblCon4.4" translatable="false">Angela: Me pica el huevo</string>
    <string name="lblCon5" translatable="false">Cuñado de Todos</string>
    <string name="lblCon5.5" translatable="false">Cuñado de Todos: GO TONO</string>
    <string name="lblCon6" translatable="false">Xupapi</string>
    <string name="lblCon6.6" translatable="false">Xupapi: NO fastidies</string>
    <string name="lblCon7" translatable="false">GAAAA</string>
    <string name="lblCon7.7" translatable="false">GAAAA:  WAZAAA</string>
    <string name="lblCon8" translatable="false">Carlozzzzzz</string>
    <string name="lblCon8.8" translatable="false">Carlozzzzzz: deja dormir no mas</string>
    <string name="lblTime1" translatable="false">12:00 p.m.</string>
    <string name="lblTime2" translatable="false">10:00 p.m.</string>
    <string name="lblNum" translatable="false">1</string>
    <string name="dialog1" translatable="false">El terror de sarmiento</string>
    <string name="dialog2">Descripción del perfil</string>
    <string name="lblCabe">Mis Tareas</string>
    <string name="lblIni1" translatable="false">Estudiar para orlandini</string>
    <string name="lblIni1.1" translatable="false">Sebitas come su empanadita despues de carrear</string>
    <string name="lblIni2" translatable="false">llegar temprano a la U</string>
    <string name="lblIni2.2" translatable="false">"pesheto celebra su cumple con sus amigos "</string>
    <string name="lblIni3" translatable="false">Atender a las clases de Landita</string>
    <string name="lblIni3.3" translatable="false">go gym</string>
    <string name="lblIni4" translatable="false">Atender a las clases de Gerardito</string>
    <string name="lblIni4.4" translatable="false">"Alvarito necesita terminara sus clases "</string>
    <string name="lblIni5" translatable="false">un partidito?</string>
    <string name="lblIni5.5" translatable="false">Alfredito sale a jugar con sus amigos</string>
    <string name="lblCabeP1">Mis Proyectos</string>
    <string name="lblInic1">Lider del Proyecto:</string>
    <string name="lblUserAsig" translatable="false">Facundo</string>
    <string name="lblToaTare">Total de Tareas</string>
    <string name="lblIn1">Título de Tarea</string>
    <string name="lblIn2">Miembros</string>
    <string name="lblIn3">Descripción</string>
    <string name="logBtn11">Foro</string>
    <string name="logBtn22">Visualizar Tareas</string>
    <string name="lblUni">Unirse al Proyecto</string>
    <string name="lblEsCode">Escribe el token</string>
    <string name="lblEnter">Unirse</string>
    <string name="txtMiembros">Miembros</string>
    <string name="txtBusquedaM">Buscar por nombre</string>
    <string name="txtMiembro1">Miembro 1</string>
    <string name="lblAcer" translatable="false">Acerca de Nosotros</string>
    <string name="lblQuSms" translatable="false">Quienes somos</string>
    <string name="lblFun">Fundadores:</string>
    <string name="lblCont">Contactanos</string>
    <string name="lblPre">Preguntas Frecuentes</string>
    <string name="lblsobre">Absuelve tus dudas y consultas con esta información</string>
</resources>