<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:itemTextAppearance="@style/MenuItemText">
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/ic_user_nav"
            android:title="@string/item1"
            app:actionLayout="@layout/menu_item1"/>
        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/ic_mensajes"
            android:title="@string/item2"
            app:actionLayout="@layout/menu_item1"/>
        <item android:id="@+id/nav_item_three"
            android:icon="@drawable/ic_configuracion"
            android:title="@string/item3"
            app:actionLayout="@layout/menu_item1"/>
        <item android:id="@+id/nav_item_four"
            android:icon="@drawable/ic_about"
            android:title="@string/item4"
            app:actionLayout="@layout/menu_item1"/>
        <item android:id="@+id/nav_item_five"
            android:icon="@drawable/ic_cerrar"
            android:title="@string/item5"
            app:actionLayout="@layout/menu_item1"/>
    </group>

</menu>