<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoMeep"
    tools:context=".actividades.InicionSesionMeepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="26dp">

        <TextView
            android:id="@+id/logLblLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/logLblLogin"
            android:translationY="100dp"
            android:textSize="40sp"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="200dp"
                android:hint="@string/logTxtCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/logTxtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                android:inputType="textPassword"
                android:maxLength="100"
                android:text="@string/logTxtClave" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/logChkRecordar"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:text="@string/logChkRecordar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logBtnIniciar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="110dp"
                android:layout_weight="1"
                android:text="@string/logBtnIniciar"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/logLblRegistro"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginVertical="110dp"
            android:gravity="center_horizontal"
            android:text="@string/logLblRegistro"
            android:textColor="@color/purple_500" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:text="@string/logLblPassword"
            android:textColor="@color/purple_500"
            android:translationY="-110dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>