<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentos.LinkProyectFragment"
    android:background="@color/fondoMeep">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/btnColor">

        <ImageView
            android:id="@+id/logVolverMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:rotation="90"
            android:src="@drawable/chevron_down"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/lblUni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:text="@string/lblUni"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/backproyect"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:rotationY="0"
            android:src="@drawable/ic_pencil"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <RelativeLayout
            android:layout_width="410dp"
            android:layout_height="661dp"
            android:layout_marginTop="70dp">

        <TextView
            android:id="@+id/lblnamee"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/lblname"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="70dp">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_backgroud"
                android:hint="@string/lblescribirName"/>
        </RelativeLayout>

            <TextView
                android:id="@+id/blname2"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="140dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/lblToken"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="165dp">

                <EditText
                    android:id="@+id/editCode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_backgroud"
                    android:hint="@string/lblEsCode"/>
            </RelativeLayout>

            <Button
                android:id="@+id/lblEnter"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/lblEnter"
                android:background="@drawable/edit_boton_celeste"
                android:textColor="@color/white"
                android:layout_marginTop="250dp"
                android:textAllCaps="false"
                android:layout_marginHorizontal="130dp"
                android:layout_weight="1"/>
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>