<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoMeep"
    tools:context=".actividades.ConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backCuenta"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flechaback"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/lblConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/lblConfig"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/border2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frgCfgPreferencias"
                    android:textSize="25dp" />

                <CheckBox
                    android:id="@+id/frgCfgSonido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frgCfgSonido" />

                <CheckBox
                    android:id="@+id/frgCfgNotificaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frgCfgNotificaciones" />

                <Spinner
                    android:id="@+id/frgCfgIdiomas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/frgCfgGuardar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/frgCfgGuardar" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>