git <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoMeep"
    tools:context=".actividades.RecuperacionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="26dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp"
                android:src="@drawable/logo1" />

            <TextView
                android:id="@+id/lblProyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:layout_toEndOf="@id/imageView"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:text="@string/lblProyecto"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRecup"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtContra1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_text_backgroud"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="10dp"
                android:hint="@string/logTxtContra1"
                android:inputType="textPersonName"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/logTxtContra2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_text_backgroud"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="10dp"
                android:hint="@string/logTxtContra2"
                android:inputType="textPersonName"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/lblVeri"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_background2"
            android:layout_marginHorizontal="20dp"
            android:textSize="17.5dp"
            android:layout_marginTop="20dp"
            android:text="@string/lblVeri"
            android:textAllCaps="false" />
    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>