<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoMeep"
    tools:context=".actividades.MapaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="26dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"
                android:src="@drawable/logo1" />

            <TextView
                android:id="@+id/lblProyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@id/imageView"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:text="@string/lblProyecto"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/foto_mapa"
            android:layout_marginTop="10dp"
            android:layout_weight="15"/>

        <EditText
            android:id="@+id/logTxtCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_backgroud"
            android:drawablePadding="10dp"
            android:hint="@string/logTxtDireccion"
            android:gravity="center"
            android:maxLength="100" />

        <Button
            android:id="@+id/lblAceptar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_boton_celeste"
            android:textColor="@color/white"
            android:text="@string/logTxtAceptar"
            android:textAllCaps="false"
            android:textSize="17.5dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
